--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@prisma/client": "^6.9.0",
     "mysql2": "^3.14.1",
-    "next": "^14.1.3",
+    "next": "14.1.3",
     "prisma": "^6.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
